# cis2107

./: .gitignore  ArrayOfPointers.c  Arrays1DDemo.c  Arrays1DDemo.h  Arrays2D.c  CIS2017_Lab08_Manual.c  CMakeLists.txt  Race.c  atm.c  main.c  paycheck.c  revenue.c
string-lib/: CMakeLists.txt  README.md  main.c
string-lib/lib/: all_letters.c  capitalize.c  dedup.c  diff.c  ends_with_ignore_case.c  find.c  is_empty.c  len_diff.c  num_in_range.c  pad.c  ptr_to.c  repeat.c  replace.c  rm_empties.c  rm_left_space.c  rm_right_space.c  rm_space.c  shorten.c  str_connect.c  str_utils.h  str_zip.c  strcmp_ign_case.c  strcpy.c  strequal.c  strlen.c  take_last.c
string-lib/lib/reimpl/: reimpl.h  s_strcpy.c  s_strlen.c  s_tolower.c  s_toupper.c  strcpy.c  strlen.c  tolower.c  toupper.c
string-lib/lib/util/: strequal.c
